# tenflow

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  ensure-dev-start-prereqs.sh  start-backend.sh  start-frontend.sh
backend/: .dockerignore  Dockerfile  alembic.ini  env.example  modal_deploy.py  modal_setup.sh  pyproject.toml  pytest.ini  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 148d733d2edf_change_user_id_to_uuid.py  2c7d628cffbf_make_datetime_columns_timezone_aware.py  336cd2112550_initial_schema.py  381b83d50e67_add_user_training_plan_relationship.py  eea3e5671028_initial_full_schema.py
backend/scripts/: create_database.py  generate_typescript_types.py  init_db.py
backend/src/tenflow/: config.py  database.py  main.py  models.py
backend/src/tenflow/api/v1/: api.py
backend/src/tenflow/api/v1/endpoints/: auth.py  training_plans.py  users.py  workflows.py
backend/src/tenflow/core/: deps.py  security.py
backend/tests/: conftest.py  test_health.py  test_training_plans.py  test_users_with_training_plans.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  generated_types.ts  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: Layout.tsx  stepper.tsx
frontend/src/components/onboarding/: ConnectStep.tsx  FitnessStep.tsx  GoalStep.tsx  OnboardingFormProvider.tsx  index.ts
frontend/src/components/ui/: bottom-navigation.tsx
frontend/src/hooks/: usePersistedOnboardingForm.ts  useTrainingProgression.ts  useTrainingProgressionCache.ts
frontend/src/hooks/__tests__/: useTrainingProgressionCache.test.ts
frontend/src/lib/: api.ts  cacheUtils.ts  types.ts
frontend/src/pages/: DailyReadinessCheck.tsx  DashboardPage.tsx  FitnessDemo.tsx  LoginPage.tsx  OnboardingPage.tsx  RaceCalendarPage.tsx  RegisterPage.tsx  SettingsPage.tsx  TrainingPlanSummary.tsx  WorkflowBuilderPage.tsx  WorkflowDetailPage.tsx  WorkflowsPage.tsx
frontend/src/stores/: auth.ts
frontend/src/test/: setup.ts
